objects/ASI_CRM_EDI_SO_Header__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Address_Line_1__c</fullName>
        <label>Alternate Delivery Address Floor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Address_Line_2__c</fullName>
        <label>Building</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Address_Line_3__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Buyer_ID__c</fullName>
        <label>Buyer ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Buyer_Name_2__c</fullName>
        <label>Buyer Name 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Buyer_Name__c</fullName>
        <label>Buyer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CRM_SO_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3. CRM SO Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_DA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer (DA)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EDI Sales Order Headers</relationshipLabel>
        <relationshipName>EDI_Sales_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_PO__c</fullName>
        <label>Cust. PO#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Delivery_Party__c</fullName>
        <label>Delivery Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ETL_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1. Import EDI Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_Key__c</fullName>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Has_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order_Date__c</fullName>
        <label>Order Date</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SO_Generation_Error__c</fullName>
        <label>SO Generation Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sender_Identification__c</fullName>
        <label>Sender Identification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Trigger_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2. EDI SO Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Voided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voided?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_EDI_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EDI Invoice</label>
        <referenceTo>ASI_CRM_EDI_Invoice_Header__c</referenceTo>
        <relationshipLabel>EDI Sales Order Headers</relationshipLabel>
        <relationshipName>EDI_Sales_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_Generated_SO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Generated SO</label>
        <referenceTo>ASI_HK_CRM_Sales_Order__c</referenceTo>
        <relationshipLabel>EDI Sales Order Headers</relationshipLabel>
        <relationshipName>EDI_Sales_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EDI Sales Order Header</label>
    <listViews>
        <fullName>ASI_CRM_HK_Completed_EDI_Sales_Order</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_ETL_Complete__c</columns>
        <columns>ASI_CRM_Trigger_Processed__c</columns>
        <columns>ASI_CRM_CRM_SO_Completed__c</columns>
        <columns>ASI_HK_Generated_SO__c</columns>
        <columns>ASI_CRM_SO_Generation_Error__c</columns>
        <columns>ASI_CRM_Customer_DA__c</columns>
        <columns>ASI_HK_CRM_EDI_Invoice__c</columns>
        <columns>ASI_CRM_Buyer_Name__c</columns>
        <columns>ASI_CRM_Buyer_Name_2__c</columns>
        <columns>ASI_CRM_Buyer_ID__c</columns>
        <columns>ASI_CRM_Customer_PO__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_CRM_Delivery_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_CRM_SO_Completed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Completed EDI Sales Order</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_HK_CRM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_HK_Pending_EDI_Sales_Order</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_ETL_Complete__c</columns>
        <columns>ASI_CRM_Trigger_Processed__c</columns>
        <columns>ASI_CRM_CRM_SO_Completed__c</columns>
        <columns>ASI_HK_Generated_SO__c</columns>
        <columns>ASI_CRM_SO_Generation_Error__c</columns>
        <columns>ASI_CRM_Customer_DA__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_HK_CRM_EDI_Invoice__c</columns>
        <columns>ASI_CRM_Buyer_Name__c</columns>
        <columns>ASI_CRM_Buyer_Name_2__c</columns>
        <columns>ASI_CRM_Buyer_ID__c</columns>
        <columns>ASI_CRM_Customer_PO__c</columns>
        <columns>ASI_CRM_Delivery_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Voided__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ASI_CRM_CRM_SO_Completed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Pending EDI Sales Order</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_HK_CRM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_HK_Voided_EDI_Sales_Order</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_ETL_Complete__c</columns>
        <columns>ASI_CRM_Trigger_Processed__c</columns>
        <columns>ASI_CRM_CRM_SO_Completed__c</columns>
        <columns>ASI_HK_Generated_SO__c</columns>
        <columns>ASI_CRM_SO_Generation_Error__c</columns>
        <columns>ASI_HK_CRM_EDI_Invoice__c</columns>
        <columns>ASI_CRM_Customer_DA__c</columns>
        <columns>ASI_CRM_Buyer_Name__c</columns>
        <columns>ASI_CRM_Buyer_Name_2__c</columns>
        <columns>ASI_CRM_Buyer_ID__c</columns>
        <columns>ASI_CRM_Customer_PO__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_CRM_Delivery_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Voided__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Voided EDI Sales Order</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_HK_CRM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_ETL_Complete__c</columns>
        <columns>ASI_CRM_Trigger_Processed__c</columns>
        <columns>ASI_CRM_CRM_SO_Completed__c</columns>
        <columns>ASI_CRM_Voided__c</columns>
        <columns>ASI_CRM_Customer_PO__c</columns>
        <columns>ASI_CRM_Customer_DA__c</columns>
        <columns>ASI_HK_Generated_SO__c</columns>
        <columns>ASI_CRM_SO_Generation_Error__c</columns>
        <columns>ASI_HK_CRM_EDI_Invoice__c</columns>
        <columns>ASI_CRM_Buyer_Name__c</columns>
        <columns>ASI_CRM_Buyer_ID__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_CRM_Delivery_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_HK_CRM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>EDISO-{YY}{000000}</displayFormat>
        <label>EDI Sales Order Header Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EDI Sales Order Headers</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_HK_EDI_SO_Header</fullName>
        <active>true</active>
        <label>ASI CRM HK EDI SO Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_HK_EDI_SO_Header_RO</fullName>
        <active>true</active>
        <label>ASI CRM HK EDI SO Header RO</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>